[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "obtool"
authors = [{name = "davycloud", email = "daweisi2006@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/davycloud/obtool"

[project.scripts]
ob = "obtool.cli:main"
